Add Andrea Richiardi to the group

--- a/index.html
+++ b/index.html
@@ -165,6 +165,19 @@
                         </li>
                     </ul>
                 </li>
+                <li class="member">
+                    <h3>Andrea Richiardi</h3>
+                    <ul>
+                        <li>
+                            <a class="github" href=
+                            "http://github.com/arichiardi">github</a>
+                        </li>
+                        <li>
+                            <a class="twitter" href=
+                            "http://www.twitter.com/richiardiandrea">twitter</a>
+                        </li>
+                    </ul>
+                </li>
             </ul>
         </div>
         <div id="projects">
